fix: enhance mobile layout and fix overflow issues

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,11 @@
 @import 'mdb-ui-kit/src/scss/mdb.free.scss';
 
 // Body
+html, body {
+   width: 100%;
+   overflow-x: hidden;
+}
+
 body {
    background-color: $primary-main;
 }
@@ -88,7 +93,7 @@ body {
       background-color: $primary-main;
       box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 12px 0px, 
          rgba(0, 0, 0, 0.05) 0px 2px 4px 0px;
-         
+
       .navbar-brand::after {
          @include nav-item-border(0, 50%, $secondary-dark);
       }
